# Edgeadc_Octavia_Driver

./: .gitignore  CONTRIBUTING.md  LICENSE  OPENSTACK_MARKETPLACE.md  README.md  check_autodeployment.py  cleanup_test_vips.py  comprehensive_test.py  debug_cluster.py  debug_gui_format.py  debug_interface.py  debug_vip_create.py  debug_weight.py  debug_weight2.py  edge_case_tests.py  final_test.py  full_test.py  full_test_output.txt  pyproject.toml  test_client_vip.py  test_integration.py  test_terraform_approach.py  test_terraform_v2.py  test_vip_creation_note.md
.github/workflows/: ci.yml  release.yml
examples/: deploy-webapp.sh  octavia.conf.example
octavia_edgeadc_driver/: agent.py  driver.py
octavia_edgeadc_driver/api/: __init__.py  edgeadc_client.py
octavia_edgeadc_driver/common/: config.py  constants.py
octavia_edgeadc_driver/tests/: conftest.py  test_client.py  test_driver.py
