[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octavia-edgeadc-driver"
version = "1.0.0"
description = "Octavia provider driver for EdgeNexus EdgeADC load balancers"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "EdgeNexus", email = "support@edgenexus.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: OpenStack",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "octavia-lib>=3.0.0",
    "oslo.config>=8.0.0",
    "oslo.log>=4.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.entry-points."octavia.api.drivers"]
edgeadc = "octavia_edgeadc_driver.driver:EdgeADCProviderDriver"

[project.entry-points."octavia.driver_agent.provider_agents"]
edgeadc_agent = "octavia_edgeadc_driver.agent:edgeadc_provider_agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["octavia_edgeadc_driver*"]
