[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octavia-edgeadc-driver"
version = "1.0.0"
description = "OpenStack Octavia provider driver for EdgeNexus EdgeADC"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "EdgeNexus", email = "support@edgenexus.io"}
]
maintainers = [
    {name = "EdgeNexus", email = "support@edgenexus.io"}
]
keywords = [
    "openstack",
    "octavia",
    "load-balancer",
    "edgeadc",
    "edgenexus",
    "lbaas"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
requires-python = ">=3.9"
dependencies = [
    "octavia-lib>=3.0.0",
    "oslo.config>=8.0.0",
    "oslo.log>=4.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://www.edgenexus.io"
Documentation = "https://github.com/edgeNEXUS/Edgeadc_Octavia_Driver#readme"
Repository = "https://github.com/edgeNEXUS/Edgeadc_Octavia_Driver"
Issues = "https://github.com/edgeNEXUS/Edgeadc_Octavia_Driver/issues"
Changelog = "https://github.com/edgeNEXUS/Edgeadc_Octavia_Driver/releases"

[project.entry-points."octavia.api.drivers"]
edgeadc = "octavia_edgeadc_driver.driver:EdgeADCProviderDriver"

[project.entry-points."octavia.driver_agent.provider_agents"]
edgeadc_agent = "octavia_edgeadc_driver.agent:edgeadc_provider_agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["octavia_edgeadc_driver*"]

[tool.pytest.ini_options]
testpaths = ["octavia_edgeadc_driver/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["octavia_edgeadc_driver"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["octavia_edgeadc_driver"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
